--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,20 @@ categories = ["command-line-utilities"]
 authors = ["Thales Maciel <contato@thalesmaciel.com>"]
 
 [dependencies]
-clap = { version = "4.1.1", features = ["derive", "unstable-doc"] }
+clap = { version = "4.4.5", features = ["derive", "unstable-doc"] }
 console = "0.15.7"
 directories = "5.0.1"
 glob = "0.3.1"
+itertools = "0.11.0"
+jsonpath-rust = "0.3.2"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
+serde_yaml = "0.9.25"
 thiserror = "1.0.40"
+yaml-rust = "0.4"
 
 [dev-dependencies]
 assert_cmd = "2.0.11"
+predicates = "3.0.4"
 temp_testdir = "0.2.3"
 
